# pkg/structs/admin.go
@@ -1,0 +1,11 @@
+package structs
+
+type Admin struct {
+	Name         string `json:"name"`
+	Login        string `json:"login"`
+	Password     string `json:"password"`
+	AccessToken  string `json:"access_token"`
+	RefreshToken string `json:"refresh_token"`
+	CreatedAt    string `json:"createdAt"`
+	UpdatedAt    string `json:"updatedAt"`
+}
