# pkg/structs/company.go
@@ -1,11 +1,11 @@
 package structs
 
 type CompanyStruct struct {
-	Id        int           `json:"id"`
-	Name      string        `json:"name"`
-	Cover     string        `json:"cover"`
-	Slogan    string        `json:"slogan"`
-	Services  ServiceStruct `json:"serviceStruct"`
-	CreatedAt string        `json:"createdAt"`
-	UpdatedAt string        `json:"updatedAt"`
+	Id     int      `json:"id"`
+	Name   Language `json:"name"`
+	Cover  string   `json:"cover"`
+	Slogan Language `json:"slogan"`
+	//Services  ServiceStruct `json:"serviceStruct"`
+	CreatedAt string `json:"createdAt"`
+	UpdatedAt string `json:"updatedAt"`
 }
