# pkg/structs/service.go
@@ -1,10 +1,10 @@
 package structs
 
 type ServiceStruct struct {
-	Id          int    `json:"id"`
-	Name        string `json:"name"`
-	Description string `json:"description"`
-	CompanyId   int    `json:"companyId"`
-	CreatedAt   string `json:"createdAt"`
-	UpdatedAt   string `json:"updatedAt"`
+	Id          int      `json:"id"`
+	Name        Language `json:"name"`
+	Description Language `json:"description"`
+	CompanyId   int      `json:"companyId"`
+	CreatedAt   string   `json:"createdAt"`
+	UpdatedAt   string   `json:"updatedAt"`
 }
