# pkg/structs/set.go
@@ -1,10 +1,10 @@
 package structs
 
 type SetStruct struct {
-	Id          int    `json:"id"`
-	Name        string `json:"name"`
-	Description string `json:"description"`
-	ServiceId   int    `json:"serviceId"`
-	CreatedAt   string `json:"createdAt"`
-	UpdatedAt   string `json:"updatedAt"`
+	Id          int      `json:"id"`
+	Name        Language `json:"name"`
+	Description Language `json:"description"`
+	ServiceId   int      `json:"serviceId"`
+	CreatedAt   string   `json:"createdAt"`
+	UpdatedAt   string   `json:"updatedAt"`
 }
